add user logic
